--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^4.0.5
+  marquee: ^2.2.3
+  shared_preferences: ^2.1.1
+  sensors: ^2.0.3
+  font_awesome_flutter: ^10.4.0
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +65,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/logo.png
+    - assets/logo-pushmate-white.png
+    - assets/quote.jpg
+    - assets/russia.gif
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
